# cryptirust

./: Cargo.toml  README.md  rebuild-readme.sh
src/: lib.rs  main.rs  word_list.rs
src/crypticli/: cli.rs
src/word_list/: cv.rs  debug.rs  eff.rs  italian.rs
