[package]
name = "cryptirust"
version = "1.0.0"
authors = ["Francesco Alemanno <francescoalemanno710@gmail.com>"]
description = "A flexible password generator that creates pronounceable passwords with adjustable entropy and custom patterns."
license = "MIT"
repository = "https://github.com/francescoalemanno/cryptirust"
documentation = "https://docs.rs/cryptirust"
readme = "README.md"
keywords = ["password", "generator", "pronounceable", "library", "cli"]
categories = ["cryptography", "text-processing", "value-formatting"]
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"